--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -5,6 +5,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr ;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  border-radius: 5px;
 } 
 .coin_image {
   width: 20%;
