--- a/src/components/CoinCharts/styles.css
+++ b/src/components/CoinCharts/styles.css
@@ -4,6 +4,7 @@
     text-align: center;
 }
 .container_coin {
+    height: 500px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     column-gap: 50px;
