--- a/src/components/CoinNav/styles.css
+++ b/src/components/CoinNav/styles.css
@@ -1,8 +1,15 @@
-.container_charts{
+.container_charts{ 
     width: 100%;
     height: 50px;
     background: #4b6cb7;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #182848, #4b6cb7);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #182848, #4b6cb7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
+.container_charts .icon {
+    position: absolute;
+    padding: 8px 0 0 20px;
+    color: #FFFF;
+    font-size: 24px;
+    cursor: pointer;
 }
